objects/TestObjecttttt__c.object
<CustomObject>
    <fields>
        <fullName>dollaBills__c</fullName>
        <label>dollaBills</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>newfiled10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>newfiled10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>newfiled11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>newfiled11</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>newfiled12__c</fullName>
        <defaultValue>false</defaultValue>
        <label>newfiled12</label>
        <type>Checkbox</type>
    </fields>
    <label>TestObjecttttt</label>
    <nameField>
        <label>TestObjecttttt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestObjecttttts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>